--- a/templates/result.html
+++ b/templates/result.html
@@ -194,7 +194,7 @@
     </main>
 
     <footer class="footer">
-      <span class="footer-text">© 2024 TopX</span>
+      <span class="footer-text">© 2025 TopX. Made by Rahul</span>
     </footer>
 
     <script>
